# proactive-ai-assistant

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: pgyer-harmony.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py  services.py
backend/tests/: test_schemas.py
docs/: external-setup.md
harmony/: build-profile.json5.example  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/models/: ApiModels.ets
harmony/entry/src/main/ets/network/: ApiClient.ets
harmony/entry/src/main/ets/pages/: Index.ets  TaskCreate.ets
harmony/entry/src/main/ets/utils/: StorageUtil.ets
harmony/entry/src/main/resources/base/element/: color.json  string.json
harmony/entry/src/main/resources/base/profile/: main_pages.json
harmony/hvigor/: hvigor-config.json5
mobile/: README.md  pubspec.yaml
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/drok/proactiveai/proactive_ai_assistant/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: api_client.dart  main.dart  push_registration.dart
mobile/test/: widget_test.dart
