[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive-ai-api"
version = "0.1.0"
description = "Rule-driven proactive notification API"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1",
  "apscheduler>=3.10,<4",
  "fastapi>=0.115,<1",
  "greenlet>=3.0,<4",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
